--- a/sdk/package.json
+++ b/sdk/package.json
@@ -4,6 +4,11 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "exports": {
+    ".": "./dist/index.js",
+    "./package.json": "./package.json"
+  },
+  "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "tsc && node dist/index.js"
   },
